tetrate/tis0502/.chainsaw-test/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mtls-permissive
spec:
  host: "*.example-namespace.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
