tetrate/tis0502/.chainsaw-test/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mtls-disabled
spec:
  host: "*.example-namespace.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
